hphp/hack/test/typecheck/async_function_implicit_return_wrong_type3.php.exp
File "async_function_implicit_return_wrong_type3.php", line 14, characters 10-10:
Invalid return type (Typing[4336])
File "async_function_implicit_return_wrong_type3.php", line 14, characters 10-10:
Expected void because this function does not always return a value
File "async_function_implicit_return_wrong_type3.php", line 14, characters 53-67:
But got Awaitable<void>
